--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <div class="partners-content">
                     <h2>식방과 함께 성장할<br>파트너를 찾습니다</h2>
                     <p>전국적인 유통망과 강력한 브랜드 파워. 철저한 품질 관리 시스템으로 쉽고 안정적인 사업을 도와드립니다.</p>
-                    <a href="#" class="btn btn-primary">공급 파트너 등록하기</a>
+                    <a href="partners.html" class="btn btn-primary">공급 파트너 등록하기</a>
                 </div>
             </div>
         </section>
